Add ability to use images from ironbank if tarballs provided

--- a/roles/rke2_common/defaults/main.yml
+++ b/roles/rke2_common/defaults/main.yml
@@ -5,3 +5,12 @@ audit_policy_config_file_path: ""
 registry_config_file_path: ""
 add_iptables_rules: false
 rke2_config: {}
+
+# TODO, find a way to get the image name from the tar file or something more automated
+ironbank_images_config:
+  kube-scheduler-image: registry1.dso.mil/ironbank/rancher-federal/rke2/hardened-kubernetes:v1.21.3-rke2r1-build20210721
+  kube-controller-manager-image: registry1.dso.mil/ironbank/rancher-federal/rke2/hardened-kubernetes:v1.21.3-rke2r1-build20210721
+  kube-apiserver-image: registry1.dso.mil/ironbank/rancher-federal/rke2/hardened-kubernetes:v1.21.3-rke2r1-build20210721
+  kube-proxy-image: registry1.dso.mil/ironbank/rancher-federal/rke2/hardened-kubernetes:v1.21.3-rke2r1-build20210721
+  runtime-image: registry1.dso.mil/ironbank/rancher-federal/rke2/rke2-runtime:v1.21.3-rke2r1
+  pause-image: registry1.dso.mil/ironbank/rancher-federal/rke2/pause:3.5
