--- a/roles/rke2_common/tasks/main.yml
+++ b/roles/rke2_common/tasks/main.yml
@@ -10,6 +10,8 @@
 - name: Has rke2 been installed already
   include_tasks: previous_install.yml
 
+- include: ironbank.yml
+
 - include: images_tarball_install.yml
   when: not installed
 
