--- a/roles/rke2_common/tasks/ironbank.yml
+++ b/roles/rke2_common/tasks/ironbank.yml
@@ -7,7 +7,9 @@
 
 - name: debug stat 1
   ansible.builtin.debug:
-    msg: "{{ ironbank_tars_on_disk }}"
+    msg:
+      - "{{ ironbank_tars_on_disk }}"
+      - "{{ registry_config_file_path }}"
 
 - name: Update config for images on disk
   ansible.utils.update_fact:
@@ -16,13 +18,12 @@
         value: "{{ item.item.value }}"
   loop: "{{ ironbank_tars_on_disk.results }}"
   register: updated2
-  when: item.stat.exists
+  # if airgap, only add images to config if they are on disk. otherwise always add them
+  when: airgap_ironbank_images and item.stat.exists or not airgap_ironbank_images
 
 - name: Print config before ironbank changes
   ansible.builtin.debug:
-    msg:
-      - original config {{ rke2_config }}
-      - Updates to combine {{ updated2.results | json_query('[].rke2_config')  | combine }}
+    var: rke2_config
 
 # Note, that the update_fact call above creates a list of rke2_configs. one for each item in the list.
 # so just merge back into 1 here. There's probably a better way to do this
@@ -32,8 +33,7 @@
 
 - name: Print config after ironbank change
   ansible.builtin.debug:
-    msg:
-      - config {{ rke2_config }}
+    var: rke_2_config
 
 - name: Add ironbank images to needed directory if provided
   copy:
