Fix syntax error for some versions of ansible / jinja2

--- a/roles/rke2_common/tasks/main.yml
+++ b/roles/rke2_common/tasks/main.yml
@@ -62,7 +62,7 @@
   include_tasks: iptables_rules.yml
   when:
     - ansible_facts.services["iptables.service"] is defined
-    - add_iptables_rules is true
+    - add_iptables_rules == true
 
 - include: add-audit-policy-config.yml
   when:
